# mailerlite-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/workflows/: main.yaml  release.yaml  test.yaml  test.yml
examples/: assign_subscriber_to_group.rs  cancel_campaign.rs  create_batch.rs  create_campaign.rs  create_field.rs  create_group.rs  create_subsciber.rs  create_webhook.rs  delete_campaign.rs  delete_field.rs  delete_form.rs  delete_group.rs  delete_segment.rs  delete_subsciber.rs  delete_webhook.rs  find_automation.rs  find_campaign.rs  find_form.rs  find_subsciber.rs  find_webhook.rs  get_automations.rs  get_campaign_languages.rs  get_campaigns.rs  get_fields.rs  get_form_subscribers.rs  get_forms.rs  get_group_subscribers.rs  get_groups.rs  get_segment_subscribers.rs  get_segments.rs  get_subscibers.rs  get_subscribers_activity_for_automation.rs  get_subscribers_activity_for_campaign.rs  get_timezones.rs  get_webhooks.rs  schedule_campaign.rs  unassign_subscriber_from_group.rs  update_campaign.rs  update_field.rs  update_form.rs  (+4 more)
src/: automation.rs  batch.rs  campaign.rs  client.rs  data.rs  field.rs  form.rs  group.rs  lib.rs  parameter.rs  response.rs  segment.rs  subscriber.rs  timezone.rs  webhook.rs
